--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: >
   WatVision team project page
   to give information about the project.
 
-baseurl: "/jekyll-doc-theme" # the subpath of your site, e.g. /blog/
-url: https://aksakalli.github.io/jekyll-doc-theme # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: https://watvision.github.io # the base hostname & protocol for your site
 git_address: https://github.com/aksakalli/jekyll-doc-theme
 git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
 
@@ -54,5 +54,3 @@ collections:
   posts:
     permalink: /blog/:year/:month/:day/:title/
     output: true
-
-theme: jekyll-theme-cayman
