--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: >
 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: https://watvision.github.io # the base hostname & protocol for your site
-git_address: https://github.com/aksakalli/jekyll-doc-theme
-git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
+git_address: https://github.com/watvision/watvision.github.io
+git_edit_address: https://github.com/watvision/watvision.github.io
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
